--- a/application/src/app/components/login/login.component.html
+++ b/application/src/app/components/login/login.component.html
@@ -1,23 +1,32 @@
-<div class="col-md-6 col-md-offset-3">
-    <div class="alert alert-info">
-        Username: test<br />
-        Password: test
+<div class="ui four column centered grid">
+  <div class="column">
+    <div class="ui segment">
+      <form class="ui form" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+
+        <div class="field" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
+          <label for="username">Username</label>
+            <input type="text" name="username" placeholder="Username" [(ngModel)]="model.username" #username="ngModel" required >
+          <div class="ui red message" *ngIf="f.submitted && !username.valid">
+            <p>Username is required</p>
+          </div>
+        </div>
+
+        <div class="field" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+          <label for="password">Password</label>
+          <input type="password" name="password" placeholder="Password" [(ngModel)]="model.password" #password="ngModel" required>
+          <div class="ui red message" *ngIf="f.submitted && !password.valid">
+            <p>Password is required</p>
+          </div>
+        </div>
+
+        <button class="ui button" [disabled]="loading">Login</button> <i *ngIf="loading" class="notched circle loading icon"></i>
+      </form>
+      <div class="ui message" *ngIf="error">
+        <div class="content">
+          <p>{{error}}</p>
+        </div>
+      </div>
     </div>
-    <h2>Login</h2>
-    <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" required />
-            <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
-        </div>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-            <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
-        </div>
-        <div class="form-group">
-            <button [disabled]="loading" class="btn btn-primary">Login</button>
-        </div>
-        <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-    </form>
+  </div>
 </div>
+
