--- a/application/src/app/app.component.html
+++ b/application/src/app/app.component.html
@@ -2,7 +2,7 @@
 <sidebar></sidebar>
   <div class="pusher" style="padding-left:260px;">
     <div class="ui basic segment">
-<breadcrumbs></breadcrumbs>
+<breadcrumb></breadcrumb>
 <router-outlet></router-outlet>
 </div>
 </div>
