--- a/application/src/assets/style/style.css
+++ b/application/src/assets/style/style.css
@@ -32,3 +32,6 @@ body {
         .item-bottom a:hover{
           text-decoration: underline;
         }
+        .login-container {
+            margin-top: 20vh!important;
+        }
