--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
       <i class="tasks icon"></i>
       Zlecenia
     </a>
-    <a class="item">
+    <a class="item" [routerLinkActive]="['active']" [routerLink]="['/consumers']">
       <i class="users icon"></i>
       Klienci
     </a>
