--- a/application/src/app/components/documents/documents.component.html
+++ b/application/src/app/components/documents/documents.component.html
@@ -53,13 +53,13 @@
           <input type="checkbox"> <label></label>
         </div>
       </td>
-      <td><a href="#">{{ document.number }}</a></td>
+      <td><a [routerLink]="['/documents', document.id]">{{ document.number }}</a></td>
       <td>{{ document.type }}</td>
       <td>{{ document.date | date: 'dd/MM/yyyy'  }}</td>
       <td>{{ document.date_of_payment | date: 'dd/MM/yyyy' }}</td>
       <td>{{ document.payment_method }}</td>
       <td><span *ngIf="document.paid">Tak</span><span *ngIf="!document.paid">Nie</span></td>
-      <td>Jan Kowalski</td>
+      <td>{{ document.consumer.name }}</td>
     </tr>
 
   </tbody>
