--- a/application/src/app/components/login/login.component.html
+++ b/application/src/app/components/login/login.component.html
@@ -3,24 +3,18 @@
     <div class="ui segment login-container">
       <form class="ui form" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
 
-        <div class="field" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
+        <div class="field" [ngClass]="{ 'error': f.submitted && !username.valid }">
           <label for="username">Username</label>
             <input type="text" name="username" placeholder="Username" [(ngModel)]="model.username" #username="ngModel" required >
-          <div class="ui red message" *ngIf="f.submitted && !username.valid">
-            <p>Username is required</p>
-          </div>
         </div>
 
-        <div class="field" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+        <div class="field" [ngClass]="{ 'error': f.submitted && !password.valid }">
           <label for="password">Password</label>
           <input type="password" name="password" placeholder="Password" [(ngModel)]="model.password" #password="ngModel" required>
-          <div class="ui red message" *ngIf="f.submitted && !password.valid">
-            <p>Password is required</p>
-          </div>
         </div>
         <button class="ui button" [disabled]="loading">Login</button> <i *ngIf="loading" class="ui mini active inline loader"></i>
       </form>
-      <div class="ui message" *ngIf="error">
+      <div class="ui red message" *ngIf="error">
         <div class="content">
           <p>{{error}}</p>
         </div>
