--- a/application/src/app/components/documents/document.consumer.component.html
+++ b/application/src/app/components/documents/document.consumer.component.html
@@ -6,7 +6,7 @@
         <span *ngIf="consumer.build_number">{{consumer.build_number}}</span>
         <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
     </span><br>
-    <span *ngIf="consumer.postal_code">{{consumer.postal_code}}</span> <br>
+    <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
     <span *ngIf="consumer.place">{{consumer.place}}</span><br>
     <span *ngIf="consumer.nip">{{consumer.nip}}</span><br>
 </p>
@@ -15,7 +15,20 @@
 <div *ngIf="isSearchView()">
     <div class="ui right floated icon button mini" (click)="cancel()"><i class="remove icon"></i></div>
     <div class="ui small icon input loading">
-        <input type="text" placeholder="Search...">
-        <i class="search icon"></i>
+        <input type="text" [(ngModel)]="searchStr" (keyup)="searchConsumer()" placeholder="Search...">
+        <!-- <i class="search icon"></i> -->
+    </div>
+    <div *ngFor="let consumer of consumers">
+        <div class="ui divider"></div>
+        <p class="user-list" (click)="apply(consumer.id)">
+            {{consumer.name}}<br>
+            <span *ngIf="consumer.street">{{consumer.street}}, 
+                <span *ngIf="consumer.build_number">{{consumer.build_number}}</span>
+                <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
+            </span><br>
+            <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
+            <span *ngIf="consumer.place">{{consumer.place}}</span><br>
+            <span *ngIf="consumer.nip">{{consumer.nip}}</span><br>
+        </p>
     </div>
 </div>
