--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -41,6 +41,14 @@
         .segment {
             max-height: 100vh;
         }
+        .user-list {
+            cursor: pointer;
+            padding-left: 5px;
+            padding-bottom: 5px;
+        }
+        .user-list:hover {
+            background-color: #f4f4f4;
+        }
 
 ::-webkit-scrollbar
 {
