--- a/application/src/app/components/documents/document.consumer.component.html
+++ b/application/src/app/components/documents/document.consumer.component.html
@@ -2,8 +2,8 @@
 <div class="ui right floated icon button mini" (click)="searchView()"><i class="write icon"></i></div>
 <p>
     {{consumer.name}}<br>
-    <span *ngIf="consumer.street">{{consumer.street}}, 
-        <span *ngIf="consumer.build_number">{{consumer.build_number}}</span>
+    <span *ngIf="consumer.street">{{consumer.street}}
+        <span *ngIf="consumer.build_number">, {{consumer.build_number}}</span>
         <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
     </span><br>
     <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
@@ -18,17 +18,25 @@
         <input type="text" [(ngModel)]="searchStr" (keyup)="searchConsumer()" placeholder="Search...">
         <!-- <i class="search icon"></i> -->
     </div>
-    <div *ngFor="let consumer of consumers">
-        <div class="ui divider"></div>
-        <p class="user-list" (click)="apply(consumer.id)">
-            {{consumer.name}}<br>
-            <span *ngIf="consumer.street">{{consumer.street}}, 
-                <span *ngIf="consumer.build_number">{{consumer.build_number}}</span>
-                <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
-            </span><br>
-            <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
-            <span *ngIf="consumer.place">{{consumer.place}}</span><br>
-            <span *ngIf="consumer.nip">{{consumer.nip}}</span><br>
-        </p>
+    <div class="ui divider"></div>
+    <div class="consumers-list" *ngIf="isResponse()">
+        <div *ngFor="let consumer of consumers">
+            <p class="consumers-list-item" (click)="apply(consumer.id)">
+                {{consumer.name}}<br>
+                <span *ngIf="consumer.street">{{consumer.street}}
+                    <span *ngIf="consumer.build_number">, {{consumer.build_number}}</span>
+                    <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
+                </span><br>
+                <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
+                <span *ngIf="consumer.place">{{consumer.place}}</span><br>
+                <span *ngIf="consumer.nip">{{consumer.nip}}</span><br>
+            </p>
+            <div class="ui divider"></div>
+        </div>
+    </div>
+    <h3 *ngIf="!isResponse()">Not found</h3>
+    <div class="ui divider"></div>
+    <div class="ui  green labeled mini icon button">
+        <i class="plus icon"></i> Nowy klient
     </div>
 </div>
