--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -41,12 +41,19 @@
         .segment {
             max-height: 100vh;
         }
-        .user-list {
+        .consumers-list {
+            max-height: 160px;
+            overflow-y: auto;
+        }
+        .consumers-list div:last-child .divider {
+            display: none;
+        }
+        .consumers-list-item {
             cursor: pointer;
             padding-left: 5px;
             padding-bottom: 5px;
         }
-        .user-list:hover {
+        .consumers-list-item:hover {
             background-color: #f4f4f4;
         }
 
