--- a/application/src/app/app.component.html
+++ b/application/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="ui attached pushable">
 <sidebar></sidebar>
   <div class="pusher" style="padding-left:260px;">
-    <div class="ui basic segment">
+    <div class="ui basic segment content-div">
 <breadcrumb></breadcrumb>
 <router-outlet></router-outlet>
 </div>
