--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+        .content-div {
+            overflow-y: auto;
+        }
         .first-letter-circle{
             width: 100px;
             height: 100px;
@@ -58,6 +61,12 @@
         }
         .consumers-list-item:hover {
             background-color: #f4f4f4;
+        }
+        .remove-search{
+            position: relative;
+            left: 200px;
+            z-index: 100;
+            cursor: pointer;
         }
 
 ::-webkit-scrollbar
