--- a/application/src/app/components/documents/documents.component.html
+++ b/application/src/app/components/documents/documents.component.html
@@ -76,7 +76,7 @@
     </th>
   </tr></thead>
   <tbody *ngIf="isReturn()">
-    <tr *ngFor="let document of documents">
+    <tr *ngFor="let document of singlePageDocuments">
     <td class="collapsing">
         <div class="ui fitted checkbox">
           <input type="checkbox" (change)="addDelete(document.id)" [checked]="isCheck(document.id)"> <label></label>
@@ -105,15 +105,20 @@
           <i class="trash icon"></i> Usuń
         </button>
       <div class="ui right floated pagination menu small">
-        <a class="icon item">
+        <a class="item" (click)="page(1)" *ngIf="actualPage>1">
+          Pierwsza
+        </a>
+        <a class="icon item" (click)="page(actualPage-1)" *ngIf="actualPage>1">
           <i class="left chevron icon"></i>
         </a>
-        <a class="item">1</a>
-        <a class="item">2</a>
-        <a class="item">3</a>
-        <a class="item">4</a>
-        <a class="icon item">
+        <span *ngFor="let button of pagesButtons">
+            <a class="item" [ngClass]="{'active': (button==actualPage)}" (click)="page(button)">{{button}}</a>
+        </span>
+        <a class="icon item" (click)="page(actualPage+1)" *ngIf="actualPage<pages"> 
           <i class="right chevron icon"></i>
+        </a>
+        <a class="item" (click)="page(pages)" *ngIf="actualPage<pages">
+          Ostatnia
         </a>
       </div>
     </th>
